--- a/docker/centos6/myjenkins-lts/Dockerfile
+++ b/docker/centos6/myjenkins-lts/Dockerfile
@@ -1,6 +1,6 @@
 # di-centos6-myjenkins-lts
 #
-# Devops Incubator image based on CentOS 6
+# Devops Incubator Jenkins LTS image based on CentOS 6
 #
 # VERSION               0.0.1
 
