back to run.sh, better for interactive, detached

--- a/docker/centos6/myjenkins-lts/Dockerfile
+++ b/docker/centos6/myjenkins-lts/Dockerfile
@@ -22,8 +22,8 @@ EXPOSE 12355
 #
 # docker run -i -t -p 12355:12355 hgomez/di-centos6-myjenkins-lts
 #
-#add ./run.sh /usr/bin/run.sh
-#RUN chmod 755 /usr/bin/run.sh
+add ./run.sh /usr/bin/run.sh
+RUN chmod 755 /usr/bin/run.sh
 #ENTRYPOINT ["/usr/bin/run.sh"]
 
 #
@@ -31,4 +31,5 @@ EXPOSE 12355
 #
 # docker run -p 12355:12355 hgomez/di-centos6-myjenkins-lts
 #
-cmd ["/usr/bin/monitor-service.sh", "myjenkins"]
+#cmd ["/usr/bin/monitor-service.sh", "myjenkins"]
+cmd ["/usr/bin/run.sh"]
