--- a/docker/centos6/myarchiva/Dockerfile
+++ b/docker/centos6/myarchiva/Dockerfile
@@ -10,8 +10,8 @@ MAINTAINER Henri Gomez "henri.gomez@gmail.com"
 # Install Archiva
 RUN yum install myarchiva -y
 
-# Jenkins HTTP port is 12355
-EXPOSE 12355
+# Archiva HTTP port is 12365
+EXPOSE 12365
 
 add ./run.sh /usr/bin/run.sh
 RUN chmod 755 /usr/bin/run.sh
@@ -23,14 +23,14 @@ RUN chmod 755 /usr/bin/run.sh
 #
 # ENTRYPOINT mode
 #
-# docker run -i -t -p 12355:12355 hgomez/di-centos6-myarchiva
+# docker run -i -t -p 12365:12365 hgomez/di-centos6-myarchiva
 #
 #ENTRYPOINT ["/usr/bin/run.sh"]
 
 #
 # CMD mode
 #
-# docker run -p 12355:12355 hgomez/di-centos6-myarchiva
+# docker run -p 12365:12365 hgomez/di-centos6-myarchiva
 #
 #cmd ["/usr/bin/monitor-service.sh", "myarchiva"]
 cmd ["/usr/bin/run.sh"]
