--- a/docker/gatling/Dockerfile
+++ b/docker/gatling/Dockerfile
@@ -9,6 +9,15 @@
 FROM     centos:centos6
 MAINTAINER Henri Gomez "henri.gomez@gmail.com"
 
+# Gatling 2.0.3
+ENV GATLING_VERSION=2.0.3
+
+# Java 7 - 7u71 / 7u71-b14 
+# Java 8 - 8u25 / 8u25-b17
+ENV JAVA_VERSION=8u25
+ENV JAVA_FULLVERSION=8u25-b17
+
+
 # Install EPEL
 RUN curl -L http://mir01.syntis.net/epel/6/x86_64/epel-release-6-8.noarch.rpm -o epel-release.noarch.rpm
 RUN rpm -Uvh epel-release.noarch.rpm
@@ -21,21 +30,16 @@ RUN yum update -y
 # Install unzip
 RUN yum install unzip -y
 
-# Install Oracle Java 8 
-RUN curl -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u25-b17/jdk-8u25-linux-x64.rpm -o jdk8-linux-x64.rpm
-RUN rpm -Uvh jdk8-linux-x64.rpm
-RUN rm jdk8-linux-x64.rpm
-
-# Install Oracle Java 7
-#RUN curl -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/7u71-b14/jdk-7u71-linux-x64.rpm -o jdk7-linux-x64.rpm
-#RUN rpm -Uvh jdk7-linux-x64.rpm
-#RUN rm jdk7-linux-x64.rpm
+# Install Oracle Java 
+RUN curl -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/${JAVA_FULLVERSION}/jdk-${JAVA_VERSION}-linux-x64.rpm -o jdk-linux-x64.rpm
+RUN rpm -Uvh jdk-linux-x64.rpm
+RUN rm jdk-linux-x64.rpm
 
 # Install Gatling
-RUN curl -L -v http://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts/2.0.3/gatling-charts-highcharts-2.0.3-bundle.zip -o gatling-charts-highcharts-2.0.3-bundle.zip
-RUN unzip gatling-charts-highcharts-2.0.3-bundle.zip
-RUN rm -f gatling-charts-highcharts-2.0.3-bundle.zip
-RUN mv gatling-charts-highcharts-2.0.3 /opt/gatling
+RUN curl -L -v http://repo1.maven.org/maven2/io/gatling/highcharts/gatling-charts-highcharts/${GATLING_VERSION}/gatling-charts-highcharts-${GATLING_VERSION}-bundle.zip -o gatling-charts-highcharts-${GATLING_VERSION}-bundle.zip
+RUN unzip gatling-charts-highcharts-${GATLING_VERSION}-bundle.zip
+RUN rm -f gatling-charts-highcharts-${GATLING_VERSION}-bundle.zip
+RUN mv gatling-charts-highcharts-${GATLING_VERSION} /opt/gatling
 
 ENV PATH $PATH:/opt/gatling/bin
 ENV JAVA_HOME /usr/java/default
