libyaml-devel is required too

--- a/docker/docker-registry-easyinstall/openSUSE/Dockerfile
+++ b/docker/docker-registry-easyinstall/openSUSE/Dockerfile
@@ -22,6 +22,7 @@ RUN zypper clean \
         python-setuptools \
         python-devel \
         libopenssl-devel \
+        libyaml-devel \
         xz-devel \
         wget \
         tar
