--- a/basic-perf-webapp/pom.xml
+++ b/basic-perf-webapp/pom.xml
@@ -7,6 +7,7 @@
 	<version>1.0.1-SNAPSHOT</version>
 	<name>Basic Performance Webapp</name>
 	<url>http://maven.apache.org</url>
+        <description>A very basic performance webapp</description>
 
 	<properties>
 		<!-- Java 5 -->
@@ -24,24 +25,31 @@
 		<simulation.users>200</simulation.users>
 		<simulation.loops>100</simulation.loops>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gatling.version>1.5.6</gatling.version>
+		<gatling.version>2.1.6</gatling.version>
+    <tomcat7.version>7.0.62</tomcat7.version>
+    <tomcat.maven.version>2.2</tomcat.maven.version>
+
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>excilys</id>
-			<name>Excilys Repository</name>
-			<url>http://repository.excilys.com/content/groups/public</url>
-		</repository>
-	</repositories>
+        <scm>
+         <connection>scm:git:git@github.com:hgomez/devops-incubator.git</connection>
+         <developerConnection>scm:git:git@github.com:hgomez/devops-incubator.git</developerConnection>
+         <url>git@github.com:hgomez/devops-incubator.git</url>
+        </scm>
+ 
+        <licenses>
+         <license>
+          <name>MIT License</name>
+          <url>http://www.opensource.org/licenses/mit-license.php</url>
+         </license>
+        </licenses>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>excilys</id>
-			<name>Excilys Repository</name>
-			<url>http://repository.excilys.com/content/groups/public</url>
-		</pluginRepository>
-	</pluginRepositories>
+        <developers>
+         <developer>
+           <name>Henri Gomez</name>
+           <email>henri.gomez@gmail.com.com</email>
+         </developer>
+        </developers>
 
 	<dependencies>
 
@@ -60,7 +68,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.excilys.ebi.gatling.highcharts</groupId>
+			<groupId>io.gatling.highcharts</groupId>
 			<artifactId>gatling-charts-highcharts</artifactId>
 			<version>${gatling.version}</version>
 			<scope>test</scope>
@@ -77,11 +85,11 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.1</version>
+				<version>${tomcat.maven.version}</version>
 				<configuration>
 					<port>${http.port}</port>
 					<path>/${webapp.name}</path>
-				</configuration>
+ 				</configuration>
 
 
 				<executions>
@@ -111,6 +119,56 @@
 
 			</plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <id>enforce-property</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+
+                <requireProperty>
+                  <property>project.description</property>
+                  <message>Project description must be specified.</message>
+                </requireProperty>
+
+                <requireProperty>
+                  <property>project.name</property>
+                  <message>Project name must be specified.</message>
+                </requireProperty>
+
+                <requireProperty>
+                  <property>project.url</property>
+                  <message>Project url must be specified.</message>
+                </requireProperty>
+
+                <requireProperty>
+                  <property>project.licenses</property>
+                  <message>At least on license must be specified.</message>
+                </requireProperty>
+
+                <requireProperty>
+                  <property>project.developers</property>
+                  <message>At least one developer must be specified.</message>
+                </requireProperty>
+
+                <requireProperty>
+                  <property>project.scm.connection</property>
+                  <message>scm section should be defined in project.</message>
+                </requireProperty>
+
+              </rules>
+              <fail>true</fail>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -129,7 +187,7 @@
 			</plugin>
 
 			<plugin>
-				<groupId>com.excilys.ebi.gatling</groupId>
+				<groupId>io.gatling</groupId>
 				<artifactId>gatling-maven-plugin</artifactId>
 				<version>${gatling.version}</version>
 				<configuration>
@@ -139,13 +197,7 @@
 						<resultsFolder>../target/gatling/results</resultsFolder>
 						<requestBodiesFolder>src/test/resources/request-bodies</requestBodiesFolder> 
 						<simulationsFolder>src/test/scala</simulationsFolder>
-						<includes>
-							<include>**/*.scala</include> 
-						</includes>
-					<excludes>
-						<exclude>advanced/*.scala</exclude>
-					</excludes>
-					<simulation>basic.BasicPerfSimulation</simulation>
+ 					  <simulationClass>basic.BasicPerfSimulation</simulationClass>
 					<jvmArgs>
 						<jvmArg>-DextHost=${simulation.host}</jvmArg>
 						<jvmArg>-DextPort=${simulation.port}</jvmArg>
